--- a/Roamio.API/Roamio.API.csproj
+++ b/Roamio.API/Roamio.API.csproj
@@ -1,12 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<AWSProjectType>Lambda</AWSProjectType>
+    <UserSecretsId>877aa512-0fca-44b9-8ea0-7e34aa6a8ab5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.7.4" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.402.10" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.405.31" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.400" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
