--- a/Roamio.API/appsettings.json
+++ b/Roamio.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Profile": "VS22",
+    "Region": "eu-north-1"
+  }
 }
