user can now enter destination and preferences.

--- a/Roamio.Mobile/Roamio.Mobile.csproj
+++ b/Roamio.Mobile/Roamio.Mobile.csproj
@@ -80,6 +80,9 @@
 	  <MauiXaml Update="Views\DestinationPickerPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\PreferencesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\SignUpPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
