created GenerateDayPlans method and started on SuggestedDayPlansPage.

--- a/Roamio.Mobile/Roamio.Mobile.csproj
+++ b/Roamio.Mobile/Roamio.Mobile.csproj
@@ -86,6 +86,9 @@
 	  <MauiXaml Update="Views\SignUpPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\SuggestedDayPlansPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\SuggestionsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
