Finalized dayplans page - got sidetracked. Going back to the detailed overview page now.

--- a/Roamio.Mobile/Roamio.Mobile.csproj
+++ b/Roamio.Mobile/Roamio.Mobile.csproj
@@ -80,7 +80,13 @@
 	  <MauiXaml Update="Views\DestinationPickerPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\DetailedDayPlanPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\EditPlansPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\FinalizedDayPlansPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\PreferencesPage.xaml">
